Fixed the date formating and cleaned up the truncate pipe and made some progress on the date pull down

--- a/src/app/company/company-details/company-details.component.css
+++ b/src/app/company/company-details/company-details.component.css
@@ -116,9 +116,11 @@ cd-description{
    position: fixed;
    bottom:0;
    margin-bottom: 0px;
+   
    line-height: 3.0;}
   .med{display: none !important;}
- 
+  .small{margin-left:10px;}
+  
    
 
 }
